blog/index.css
body {
  font-family: Arial;
  padding: 20px;
  background: #f1f1f1;
  line-height: 30px;
  width: 60%;
  margin: auto;
  font-size: 1rem;
}

a:visited {
  color: green;
}

h1,
h3,
a:link {
  color: #f1002a;
}

table,
th,
td {
  border: 1px solid black;
  border-collapse: collapse;
  padding: 5px;
}

.tags {
  color: #f1002a;
}

.half_half {
  display: grid;
  /* grid-gap: 50px 100px; */
  grid-template-rows: auto auto auto;
  padding-bottom: 1.5rem;
}

.tin_drum {
  max-width: 200px;
}

.horsey {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 10vw;
  -webkit-animation: spin 4s linear infinite;
  -moz-animation: spin 4s linear infinite;
  animation: spin 4s linear infinite;
}

@-moz-keyframes spin {
  100% {
    -moz-transform: rotate(360deg);
  }
}
@-webkit-keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
  }
}
@keyframes spin {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

details {
  cursor: pointer;
}

.subtitle {
  line-height: 1rem;
  color: #444445;
  width: 60%;
}

p,
pre {
  color: #444445;
}

pre {
  border: solid 2px #c0c0c0;
  padding: 5px;
}

p::first-letter {
  font-size: 150%;
  color: #373738;
}

@media (max-width: 780px) {
  body {
    width: 90%;
    margin: auto;
  }
  img {
    max-width: 90vw;
  }
  .horsey {
    max-width: 50vw;
  }
}

